Add Services to API and WEB

--- a/ToDo.Api/ToDo.Api.csproj
+++ b/ToDo.Api/ToDo.Api.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ToDo.Api.Services\ToDo.Api.Services.csproj" />
     <ProjectReference Include="..\ToDo.Data\ToDo.Data.csproj" />
     <ProjectReference Include="..\ToDo.Repositories\ToDo.Repositories.csproj" />
   </ItemGroup>
