Dodanie bootstrap do projektu, dodanie mozliwosci edytowania, dodawania i wyswietlania ToDoItems

--- a/ToDo.Api.Services/ToDo.Api.Services.csproj
+++ b/ToDo.Api.Services/ToDo.Api.Services.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ToDo.Models\ToDo.Models.csproj" />
+    <ProjectReference Include="..\ToDo.Repositories\ToDo.Repositories.csproj" />
+  </ItemGroup>
+
 </Project>
