--- a/ToDo.Web/ToDo.Web.csproj
+++ b/ToDo.Web/ToDo.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,12 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BootstrapBlazor" Version="7.4.4" />
+    <PackageReference Include="BootstrapBlazor.FontAwesome" Version="7.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.11" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ToDo.Services\ToDo.Services.csproj" />
+    <ProjectReference Include="..\ToDo.Services\ToDo.Web.Services.csproj" />
   </ItemGroup>
 
 </Project>
