--- a/ToDo.Web/ToDo.Web.csproj
+++ b/ToDo.Web/ToDo.Web.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\ToDo.Services\ToDo.Web.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\ToDoItemPages\Modals\" />
+  </ItemGroup>
+
 </Project>
